# pyrecordio

./: .bazelrc  .gitignore  BUILD  Dockerfile  MANIFEST.in  README.md  WORKSPACE  build_pip_pkg.sh  setup.py
artifacts/: recordio-0.0.1-py3-none-any.whl
data/datasets/mnist/: record.py
data/pytorch/: BUILD  torch_dataset_test.py
data/tensorflow/: CMakeLists.txt  recordio_chunk.cc  recordio_chunk.h  recordio_chunk_parser.h  recordio_index.cc  recordio_index.h  recordio_reader.cc  recordio_reader.h
data/tensorflow/operator/: BUILD  CMakeLists.txt  recordio_dataset_op.cc  tf_recordio_dataset.py  tf_recordio_dataset_test.py
data/tensorflow/recordio/: BUILD  CMakeLists.txt  recordio_chunk.cc  recordio_chunk.h  recordio_chunk_parser.cc  recordio_chunk_parser.h  recordio_reader.cc  recordio_reader.h
data/tensorflow/test/: CMakeLists.txt  recordio_reader_test.cc
recordio/: BUILD  __init__.py  chunk.py  chunk_test.py  file_index.py  file_index_test.py  file_test.py  writer.py  writer_reader_test.py
recordio/pytorch/: torch_dataset_test.py
recordio/recordio/: BUILD  chunk.py  chunk_test.py  file.py  file_index.py  file_index_test.py  file_test.py  header.py  header_test.py  reader.py  reader_test.py  writer.py  writer_reader_test.py  writer_test.py
recordio/tensorflow_op/: BUILD  __init__.py
recordio/tensorflow_op/cc/: BUILD  recordio_chunk.cc  recordio_chunk.h  recordio_chunk_parser.cc  recordio_dataset_op.cc
recordio/tensorflow_op/python/: BUILD  tf_recordio_dataset.py  tf_recordio_dataset_test.py
recordio/tf/: BUILD  tf_recordio_dataset.py  tf_recordio_dataset_test.py
recordio/tf/test_data/: test_data_with_snappy_compression
recordio/torch_dataset/: BUILD  __init__.py  torch_dataset.py  torch_dataset_test.py
tensorflow_recordio/: __init__.py  tf_recordio_dataset_test.py
tensorflow_recordio/cc/: recordio_chunk_parser.h  recordio_reader.cc  recordio_reader.h
tensorflow_recordio/python/: BUILD  tf_recordio_dataset.py  tf_recordio_dataset_test.py
tools/: bazel.rc
torch_recordio_dataset/: BUILD
